dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/swish.c)
dnl check for #! (shebang)
AC_SYS_INTERPRETER
dnl Checks for programs.
AC_PROG_MAKE_SET
AC_CONFIG_SUBDIRS(src)

dnl Check for Perl
AC_PATH_PROG(PERL, perl, /usr/local/bin/perl,$PATH:/usr/bin:/usr/local/bin:/opt/bin:/usr/freeware/bin)

AC_OUTPUT(Makefile doc/Makefile)


