
dnl set version (or would AM_INIT_AUTOMAKE(package_name, package_version) be better?
AC_SUBST(VERSION)
VERSION=2.1-dev-18

AC_SUBST(PROJECT)
PROJECT=swish-e


dnl Tell configure where the source is
AC_INIT(src/swish.c)

dnl check for #! (shebang)
AC_SYS_INTERPRETER

dnl Set the @SET_MAKE@ variable
AC_PROG_MAKE_SET

dnl Check for Perl
AC_PATH_PROG(PERL, perl, /usr/local/bin/perl,$PATH:/usr/bin:/usr/local/bin:/opt/bin:/usr/freeware/bin)


dnl -- from src/configure.in --

dnl Check for a C compiler
AC_PROG_CC

dnl What's the architecture
AC_CANONICAL_SYSTEM
dnl Resolve ranlib dependencies
AC_PROG_RANLIB

dnl Checks for libraries.
dnl Replace `main' with a function in -lm:
AC_CHECK_LIB(m, main)

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS(strings.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_STRUCT_TM

dnl Checks for library functions.
AC_FUNC_ALLOCA
AC_FUNC_STRFTIME
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(re_comp regcomp strdup strstr)
AC_CHECK_LIB(m,log)


AC_OUTPUT(Makefile doc/Makefile src/Makefile)


