exampledir = $(datadir)/doc/$(PACKAGE)/examples/conf

conf_dir = \
    stopwords/dutch.txt \
    stopwords/english.txt \
    stopwords/german.txt \
    stopwords/spanish.txt \
    README \
    example1.config \
    example2.config \
    example3.config \
    example4.config \
    example5.config \
    example6.config \
    example7.config \
    example8.config \
    example9.config \
    example9.pl


nobase_example_DATA = $(conf_dir)

EXTRA_DIST = $(conf_dir)

