AM_CPPFLAGS = -I"$(srcdir)/xmlparse" -I"$(srcdir)/xmltok"

noinst_LTLIBRARIES = libswexpat.la
libswexpat_la_SOURCES = \
	xmltok.c \
	xmlrole.c \
	xmlparse.c


EXTRA_DIST = \
	COPYING \
	expat.dsw \
	xmlparse/xmlparse.c \
	xmlparse/xmlparse.dsp \
	xmlparse/xmlparse.h \
	xmltok/ascii.h \
	xmltok/asciitab.h \
	xmltok/dllmain.c \
	xmltok/iasciitab.h \
	xmltok/latin1tab.h \
	xmltok/nametab.h \
	xmltok/utf8tab.h \
	xmltok/xmldef.h \
	xmltok/xmlrole.c \
	xmltok/xmlrole.h \
	xmltok/xmltok.c \
	xmltok/xmltok.dsp \
	xmltok/xmltok.h \
	xmltok/xmltok_impl.c \
	xmltok/xmltok_impl.h \
	xmltok/xmltok_ns.c

