AM_CPPFLAGS = -I"$(srcdir)"

noinst_LTLIBRARIES = libsnowball.la
libsnowball_la_SOURCES = \
	api.c \
	api.h \
	utilities.c \
	header.h \
	stem_en1.c \
	stem_en1.h \
	stem_en2.c \
	stem_en2.h \
	stem_es.c \
	stem_es.h \
	stem_fr.c \
	stem_fr.h \
	stem_it.c \
	stem_it.h \
	stem_pt.c \
	stem_pt.h \
	stem_de.c \
	stem_de.h \
	stem_nl.c \
	stem_nl.h \
	stem_no.c \
	stem_no.h \
	stem_se.c \
	stem_se.h \
	stem_dk.c \
	stem_dk.h \
	stem_ru.c \
	stem_ru.h \
	stem_fi.c \
	stem_fi.h



